css 4 table & fix prodlist spacing

--- a/public/css/mycss.css
+++ b/public/css/mycss.css
@@ -89,3 +89,16 @@ aside {
 .navbar-fixed-top{
 	background-color: yellow;
 }
+/*!
+ * Extend Bootstrap v2.3.1 to provide cell alignment (doh)
+ *
+ */
+.table td.tdRight {
+  text-align: right;
+}
+.table td.tdCenter {
+  text-align: center;
+}
+.table-nonfluid {
+   width: auto;
+}
